--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,3 +41,12 @@ services:
       - POSTGRE_DB=jobber_reviews
     ports:
       - '5432:5432'
+  rabbitmq:
+    container_name: rabbitmq_container
+    image: rabbitmq:3.13-rc-management-alpine
+    restart: always
+    ports:
+      # AMQP protocol port
+      - '5672:5672'
+      # Management UI
+      - '15672:15672'
